[gd_scene load_steps=7 format=3 uid="uid://kshv2y4ybepx"]

[ext_resource type="Texture2D" uid="uid://bfaf86saeu6xc" path="res://sprite-sheet.svg" id="1_v4ha7"]
[ext_resource type="Script" path="res://objects/weapon/weapon_2d.gd" id="1_w1ow3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ec7ct"]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="Animation" id="Animation_v7cu1"]
resource_name = "shoot"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.297302, 1, 1),
"update": 0,
"values": [Vector2(40, 0), Vector2(20, 0), Vector2(40, 0)]
}

[sub_resource type="Animation" id="Animation_xtrim"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfp53"]
_data = {
"RESET": SubResource("Animation_xtrim"),
"shoot": SubResource("Animation_v7cu1")
}

[node name="Weapon2D" type="Node2D"]
script = ExtResource("1_w1ow3")

[node name="CooldownTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(40, 0)
texture = ExtResource("1_v4ha7")
region_enabled = true
region_rect = Rect2(192, 176, 54, 18)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(65, 0)

[node name="RangeArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea2D"]
shape = SubResource("CircleShape2D_ec7ct")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vfp53")
}
